# Ai-SDK_chatUI

./: .gitignore  README.md  next.config.mjs  package-lock.json  package.json
app/: globals.css  layout.tsx  providers.tsx
app/(shell)/: layout.tsx
app/(shell)/admin/: admin.css  page.tsx
app/(shell)/chat/: chat.css  page.tsx
components/: theme-provider.tsx
components/admin/: password-gate.css  password-gate.tsx
components/layout/: sidebar-nav.tsx
docs/: ADMIN_GUIDE.md  ADMIN_PASSWORD_RESET.md  ARCHITECTURE_ALIGNMENT.md  ARCHITECTURE_SYNC.md  DEBUG_GUIDE.md  DEPLOYMENT_GUIDE.md  EXE_VERSION_TESTING_GUIDE.md  INTEGRATION_STATUS.md  PERFORMANCE_OPTIMIZATION.md  README.md  USER_GUIDE.md  secure-config.md
lib/chat/: auto-vector-store.ts  file-upload.ts  file-validation.ts  openai-client.ts  session.ts  streaming.ts  tauri-openai-client.ts
lib/export/: bundle.ts
lib/logging/: error-logger.ts  log-sanitizer.ts
lib/openai/: models.ts  org-validation.ts  vector-stores.ts
lib/security/: base-url.ts  headers.ts  secure-config.ts
lib/settings/: admin-password.ts  feature-restrictions.ts  header-utils.ts  org-validation-guard.ts  org-whitelist.ts  password-reset-file.ts  theme-storage.ts
lib/storage/: export.ts  indexed-db.ts  schema.ts  seeds.ts
lib/utils/: tauri-helpers.ts
scripts/: create-password-reset-file.bat  create-password-reset-file.js  generate-config.bat  generate-config.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  openai_proxy.rs  secure_config.rs
(+8 files in other folders)
