[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5" }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
opt-level = "z"     # サイズ最適化（"z" = 最小サイズ、"3" = 最高速度）
lto = true          # Link Time Optimization（ビルド時間は長くなるがサイズ削減）
codegen-units = 1   # 並列コンパイルを無効にしてサイズ削減
panic = "abort"     # パニック時のスタックトレースを無効化（サイズ削減）
strip = true        # デバッグシンボルを削除（大幅なサイズ削減）
